[package]
name = "dep-why"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT"
description = "Trace dependency chains in lock files to understand why packages are installed"
repository = "https://github.com/yourusername/dep-why"

[[bin]]
name = "dep-why"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
colored = "2.1"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"